Fixed visibility css

--- a/assets/wpcui.css
+++ b/assets/wpcui.css
@@ -4,15 +4,15 @@
  */
 
 
-.wpcui-section-title-section i.wpcui-visibility {
+i.wpcui-visibility {
   transition: opacity var(--animation-speed) ease-in-out;
 }
 
-.wpcui-section-title-section i.wpcui-is-visible {
+i.wpcui-is-visible {
   opacity: 1;
 }
 
-.wpcui-section-title-section i.wpcui-is-not-visible {
+i.wpcui-is-not-visible {
   opacity: 0.3;
 }
 
